# blogAPI1

./: Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  heroku.yml  pyproject.toml
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blogsite/: .env  settings.py  urls.py
