[tool.poetry]
name = "blogapi"
version = "0.1.0"
description = ""
authors = ["Akbota <aqbotamaratqyzy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-environ = "^0.11.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.1"
psycopg2-binary = "^2.9.9"
django-heroku = "^0.3.1"
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
